refactor: update titles and styles for consistency in index.html and jsonlint/index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Grady's Tools</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>tools</title>
+    <style>
+      body {
+        background: #1a1a1a;
+        color: #ccc;
+        font-family: monospace;
+        padding: 40px;
+        font-size: 14px;
+      }
+      h1 {
+        font-size: 16px;
+        font-weight: normal;
+        margin-bottom: 20px;
+        color: #888;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+      }
+      a {
+        color: #6a9fb5;
+      }
+    </style>
   </head>
   <body>
-    <h1>Tools</h1>
+    <h1>tools</h1>
     <ul>
-      <li><a href="./jsonlint/">JSON Lint</a></li>
+      <li><a href="./jsonlint/">json linter</a></li>
     </ul>
   </body>
 </html>
