feat: add jwt decoder page and link in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h1>tools</h1>
     <ul>
       <li><a href="./jsonlint/">json linter</a></li>
+      <li><a href="./jwt/">jwt decoder</a></li>
     </ul>
   </body>
 </html>
