feat: add date converter link to index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <ul>
       <li><a href="./jsonlint/">json linter</a></li>
       <li><a href="./jwt/">jwt decoder</a></li>
+      <li><a href="./date/">date converter</a></li>
     </ul>
   </body>
 </html>
