feat: add QR generator page and link in index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="./jsonlint/">json linter</a></li>
       <li><a href="./jwt/">jwt decoder</a></li>
       <li><a href="./date/">date converter</a></li>
+      <li><a href="./qr/">qr generator</a></li>
     </ul>
   </body>
 </html>
