feat: add RSS reader page and link in index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li><a href="./jwt/">jwt decoder</a></li>
       <li><a href="./date/">date converter</a></li>
       <li><a href="./qr/">qr generator</a></li>
+      <li><a href="./rss/">rss reader</a></li>
     </ul>
   </body>
 </html>
